--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
             <div class="resume">
                 <div class="left">
                     <div class="img">
-                        <img src="img2.jpeg" alt="user" width="100px">
+                        <img src="img2.jpeg" alt="user" >
                     </div>
                     <div class="contact_wrap pb">
                         <div class="title">Contact</div>
