--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><h2>Sonia Kasar</h2></li>
                 <li><h5>MCA Student</h5></li>
-                <li><a href="a.html" class="a">Home</a></li>
+                <li><a href="index.html" class="a">Home</a></li>
                 <li><a href="about.html"  class="a">About me</a></li>
                 <li><a href="edu.html"  class="a">Education</a></li>
                 <li><a href="skill.html"  class="a">Skills</a></li>
