--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
             <div class="resume">
                 <div class="left">
                     <div class="img">
-                        <img src="C:\Users\mca22\OneDrive\Desktop\VS workSpace\img2.jpeg" alt="user" width="100px">
+                        <img src="img2.jpg" alt="user" width="100px">
                     </div>
                     <div class="contact_wrap pb">
                         <div class="title">Contact</div>
