--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="img2.jpeg" alt="">
+            <img src="img2.jpg" alt="">
             <ul>
                 <li><h2>Sonia Kasar</h2></li>
                 <li><h5>MCA Student</h5></li>
